@startuml
'https://plantuml.com/class-diagram

abstract class AbstractEnemy
{
    + AbstractEnemy(int locationX, int locationY, double speedX, double speedY,
      int hp, int shootNum, int power, int direction, ShootStrategy shootStrategy)
    + {abstract} dropProps():List<AbstractProp>
}

abstract class AbstractEnemyFactory
{
    + {abstract} creatEnemy():AbstractEnemy
}

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- BossEnemy

MobEnemy <.. MobEnemyFactory
EliteEnemy <.. EliteEnemyFactory
BossEnemy <.. BossEnemyFactory

AbstractEnemyFactory <|-up- MobEnemyFactory
AbstractEnemyFactory <|-up- EliteEnemyFactory
AbstractEnemyFactory <|-up- BossEnemyFactory

class MobEnemy {
    + MobEnemy(int locationX, int locationY, double speedX, double speedY,
      int hp, int shootNum, int power, int direction, ShootStrategy shootStrategy)
    + forward():void
    + dropProps():List<AbstractProp>
    + update():void
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, double speedX, double speedY,
      int hp, int shootNum, int power, int direction, ShootStrategy shootStrategy)
    + forward():void
    + dropProps():List<AbstractProp>
    + update():void
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, double speedX, double speedY,
      int hp, int shootNum, int power, int direction, ShootStrategy shootStrategy)
    + dropProps():List<AbstractProp>
    + update():void
}

class MobEnemyFactory {
    + creatEnemy():AbstractEnemy
}

class EliteEnemyFactory {
    + creatEnemy():AbstractEnemy
}

class BossEnemyFactory {
    + creatEnemy():AbstractEnemy
}

@enduml